타임리프 설정

--- a/ManiMani/src/main/resources/templates/main/main_template.html
+++ b/ManiMani/src/main/resources/templates/main/main_template.html
@@ -1,8 +1,6 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+xmlns:layout="http://www.ultrag.net.nz/thymeleaf/layout">
 <head>
   <meta charset="UTF-8">
   <title>ManiMani!</title>
@@ -27,11 +25,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
   <!-- ------- -->
   
-  <link rel="stylesheet" type="text/css" href="../css/util.css"> <!-- util css 파일 -->
-  <link rel="stylesheet" type="text/css" href="../css/main.css"> <!-- 공용 css 파일 -->
+  <link rel="stylesheet" type="text/css" th:href="@{/css/util.css}"> <!-- util css 파일 -->
+  <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"> <!-- 공용 css 파일 -->
 </head>
 <body>
-    <jsp:include page="content.jsp"/>
-    <jsp:include page="footer.jsp"/>
+  <th:block th:include="${main_content}"></th:block>
+  <th:block th:include="fragments/footer::footerFragment"></th:block>
 </body>
 </html>
