--- a/ManiMani/src/main/resources/templates/group/main.html
+++ b/ManiMani/src/main/resources/templates/group/main.html
@@ -1,5 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,6 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-footer
+
+    <div class="fs-20"> aaa</div>
 </body>
 </html>
