main.css, util.css 공용 색 추가

--- a/ManiMani/src/main/resources/static/css/main.css
+++ b/ManiMani/src/main/resources/static/css/main.css
@@ -1,2 +1,73 @@
 @charset "UTF-8";
 
+.cl01 {
+  color: #fd9c87;
+}
+
+.cl02 {
+  color: #f7ab48;
+}
+
+.cl03 {
+  color: #bfe261;
+}
+
+.cl04 {
+  color: #7cdda6;
+}
+
+.cl05 {
+  color: #93b8ef;
+}
+
+.cl06 {
+  color: #dcedbc;
+}
+
+.cl07 {
+  color: #a2f2ce;
+}
+
+.cl08 {
+  color: #fff7ee;
+}
+
+.cl09 {
+  color: #98d5f4;
+}
+
+.bg01 {
+  background-color: #fd9c87;
+}
+
+.bg02 {
+  background-color: #f7ab48;
+}
+
+.bg03 {
+  background-color: #bfe261;
+}
+
+.bg04 {
+  background-color: #7cdda6;
+}
+
+.bg05 {
+  background-color: #93b8ef;
+}
+
+.bg06 {
+  background-color: #dcedbc;
+}
+
+.bg07 {
+  background-color: #a2f2ce;
+}
+
+.bg08 {
+  background-color: #fff7ee;
+}
+
+.bg09 {
+  background-color: #98d5f4;
+}
