--- a/ManiMani/src/main/resources/static/css/util.css
+++ b/ManiMani/src/main/resources/static/css/util.css
@@ -16,10 +16,10 @@ body, html {
 	color: #666666;
     
 	height: 100%;
-	background-color: #fff;
+	background-color: #fff7ee;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+	box-sizing: border-box;    
 }
 
 /*---------------------------------------------*/
