input 기본 디자인 설정

--- a/ManiMani/src/main/resources/static/css/util.css
+++ b/ManiMani/src/main/resources/static/css/util.css
@@ -38,8 +38,10 @@ ul, li {
 
 /*---------------------------------------------*/
 input, textarea, label {
-	outline: none;
-	border: 1.5px;
+  background-color: white;
+  outline: none;
+  border: 1.5px solid #494949;
+  border-radius: 20px;
 }
 
 /*---------------------------------------------*/
