--- a/ManiMani/src/main/resources/templates/group/group_template.html
+++ b/ManiMani/src/main/resources/templates/group/group_template.html
@@ -27,6 +27,10 @@ xmlns:layout="http://www.ultrag.net.nz/thymeleaf/layout">
   
   <link rel="stylesheet" type="text/css" th:href="@{/css/util.css}"> <!-- util css 파일 -->
   <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"> <!-- 공용 css 파일 -->
+  <link rel="stylesheet" type="text/css" th:href="@{/css/group.css}"> <!-- group css 파일 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
   <th:block th:include="fragments/side::sideFragment"></th:block>
