--- a/ManiMani/src/main/resources/templates/group/main.html
+++ b/ManiMani/src/main/resources/templates/group/main.html
@@ -5,7 +5,50 @@
 <title>Insert title here</title>
 </head>
 <body>
-
-    <div class="fs-20"> aaa</div>
+	<div class="gList">
+	<div class="oneGroupwithBtn">
+		<div class="oneGroup">
+			<p class="gTitle">나의 마니또</p>
+			<p class="discrip">우주최강 마니마니!</p>	
+			<div class="profiles">
+				햄찌부찌 외 2명
+				<img class="profilePic" th:src="@{/img/profiles.png}">
+			</div>		
+		</div>
+		<button class="enterBtn">입장하기</button>
+	</div>
+	<div class="oneGroupwithBtn">
+		<div class="oneGroup">
+			<p class="gTitle">나의 마니또</p>
+			<p class="discrip">우주최강 마니마니!</p>	
+			<div class="profiles">
+				햄찌부찌 외 2명
+				<img class="profilePic" th:src="@{/img/profiles.png}">
+			</div>		
+		</div>
+		<button class="enterBtn">입장하기</button>
+	</div>
+	<div class="oneGroupwithBtn">
+		<div class="oneGroup">
+			<p class="gTitle">나의 마니또</p>
+			<p class="discrip">우주최강 마니마니!</p>	
+			<div class="profiles">
+				햄찌부찌 외 2명
+				<img class="profilePic" th:src="@{/img/profiles.png}">
+			</div>		
+		</div>
+		<button class="enterBtn">입장하기</button>
+	</div>
+	
+	<div class="oneGroupwithBtn">	
+		<button class="plusGroup">
+			<p class="gPlus">+</p>
+		</button>
+		<button class="enterBtn">그룹 추가하기</button>
+	</div>
+		<!-- <div class="makeGroup">
+			<p class="gMake">+</p>
+		</div> -->
+	</div>
 </body>
 </html>
