로그인 & 푸터 디자인 구현

--- a/ManiMani/src/main/resources/templates/fragments/footer.html
+++ b/ManiMani/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
@@ -6,7 +6,9 @@
 </head>
 <body>
   <th:block th:fragment="footerFragment">
-    footer
+    <div class="bg09 full-w text-center p-tb-40">
+    Copyright 2022. GFriend with HD all rights reserved.
+    </div>
   </th:block>
 </body>
 </html>
