--- a/ManiMani/src/main/resources/templates/group/main.html
+++ b/ManiMani/src/main/resources/templates/group/main.html
@@ -5,35 +5,13 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<div class="gList">
-	<div class="oneGroupwithBtn">
-		<div class="oneGroup">
-			<p class="gTitle">나의 마니또</p>
-			<p class="discrip">우주최강 마니마니!</p>	
+	<div class="gList dis-flex flex-c-m">
+	<div class="oneGroupwithBtn" th:each="vo:${list}">
+		<div class="oneGroup" >
+			<p class="gTitle" th:text="${vo.gname.length>=7?#strings.substring(vo.gname,0,7)+'...':vo.gname}"></p>
+			<p class="discrip" th:text="${vo.description}"></p>	
 			<div class="profiles">
-				햄찌부찌 외 2명
-				<img class="profilePic" th:src="@{/img/profiles.png}">
-			</div>		
-		</div>
-		<button class="enterBtn">입장하기</button>
-	</div>
-	<div class="oneGroupwithBtn">
-		<div class="oneGroup">
-			<p class="gTitle">나의 마니또</p>
-			<p class="discrip">우주최강 마니마니!</p>	
-			<div class="profiles">
-				햄찌부찌 외 2명
-				<img class="profilePic" th:src="@{/img/profiles.png}">
-			</div>		
-		</div>
-		<button class="enterBtn">입장하기</button>
-	</div>
-	<div class="oneGroupwithBtn">
-		<div class="oneGroup">
-			<p class="gTitle">나의 마니또</p>
-			<p class="discrip">우주최강 마니마니!</p>	
-			<div class="profiles">
-				햄찌부찌 외 2명
+				총 멤버 <p style='display:inline-block'th:text="${vo.num}"></p>명
 				<img class="profilePic" th:src="@{/img/profiles.png}">
 			</div>		
 		</div>
