로그인 구현 및 테이블 명에 맞춰 users -> member로 변경

--- a/ManiMani/src/main/resources/templates/index.html
+++ b/ManiMani/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@ xmlns:layout="http://www.ultrag.net.nz/thymeleaf/layout">
   <meta charset="UTF-8">
   <title>ManiMani!</title>
   <script type="text/javascript">
-    location.href="main/login";
+    location.href="login";
   </script>
 </head>
 <body>
