letter부분 디자인 구현

--- a/ManiMani/src/main/resources/static/css/letter.css
+++ b/ManiMani/src/main/resources/static/css/letter.css
@@ -1,1 +1,60 @@
 @charset "UTF-8";
+
+.table-letter {
+	width: 80%;
+	height: 800px;
+	min-width: 800px;
+	display: flex;
+	margin: auto;
+}
+
+.letterbox {
+	position: relative;
+	width: 90%;
+	height: 720px;
+	border-radius: 20px;
+	border: 1.5px solid #494949;
+	background-color: #dcedbc;
+	margin: 15px;
+	padding: 15px;
+	display: inline-block;
+}
+
+.letterbox-s {
+    position: relative;
+    width: 95%;
+    height: 550px;
+    border-radius: 20px;
+    border: 1.5px solid #494949;
+    background-color: #fff7ee;
+    margin: 20px;
+    padding: 20px;
+    display: inline-block;	
+}
+
+.l-table {
+	width: 100%;
+}
+
+.l-table tr {
+	text-align: center;
+	padding: 10px;
+}
+
+.l-table th {
+	text-align: center;
+	padding: 10px;
+	border-radius: 20px;
+	border: 1.5px #494949;
+	background-color: #93b8ef;
+	color: white;
+}
+
+.l-table td {
+	text-align: center;
+	padding: 10px;
+}
+
+.l-page {
+	text-align: center;
+}
