--- a/ManiMani/src/main/resources/templates/letter/letter.html
+++ b/ManiMani/src/main/resources/templates/letter/letter.html
@@ -5,6 +5,49 @@
 <title>Insert title here</title>
 </head>
 <body>
-  <div class="fs-20"> Letter TEST </div>
+  <div class="bg08">
+    <div class="table-letter">
+      <div class="letterbox">
+        <h2>받은편지함</h2>
+        <div class="letterbox-s">
+          <table class="l-table">
+            <tr>
+              <th>날짜</th>
+              <th>내용</th>
+            </tr>
+            <tr>
+              <td>2022-05-23 21:30</td>
+              <td>별 내용 없을듯</td>
+            </tr>
+            <tr>
+              <td>2022-05-23 21:30</td>
+              <td>별 내용 없을듯</td>
+            </tr>
+            <tr>
+              <td>2022-05-23 21:30</td>
+              <td>별 내용 없을듯</td>
+            </tr>
+            <tr>
+              <td>2022-05-23 21:30</td>
+              <td>별 내용 없을듯</td>
+            </tr>
+            <tr>
+              <td>2022-05-23 21:30</td>
+              <td>별 내용 없을듯</td>
+            </tr>
+          </table>
+        </div>
+        <div class="l-page">
+                    여기는 페이징 들어갈곳~
+        </div>
+      </div>
+    </div>
+    <!--
+    <div class="row">
+      <div class="col-md-8 bg02"> 8사이즈 </div>
+      <div class="col-md-4 bg04"> 4사이즈 </div>
+    </div>
+      -->   
+  </div>
 </body>
 </html>
