letter 부분 디자인 수정

--- a/ManiMani/src/main/resources/templates/letter/letter.html
+++ b/ManiMani/src/main/resources/templates/letter/letter.html
@@ -6,48 +6,25 @@
 </head>
 <body>
   <div class="bg08">
-    <div class="table-letter">
+    <div>
+      <div class="p-l-20">
+        <button class="send"> 보낸편지함 </button>
+        <button class="receive"> 받은편지함 </button>
+      </div>
       <div class="letterbox">
-        <h2>받은편지함</h2>
         <div class="letterbox-s">
-          <table class="l-table">
-            <tr>
-              <th>날짜</th>
-              <th>내용</th>
-            </tr>
-            <tr>
-              <td>2022-05-23 21:30</td>
-              <td>별 내용 없을듯</td>
-            </tr>
-            <tr>
-              <td>2022-05-23 21:30</td>
-              <td>별 내용 없을듯</td>
-            </tr>
-            <tr>
-              <td>2022-05-23 21:30</td>
-              <td>별 내용 없을듯</td>
-            </tr>
-            <tr>
-              <td>2022-05-23 21:30</td>
-              <td>별 내용 없을듯</td>
-            </tr>
-            <tr>
-              <td>2022-05-23 21:30</td>
-              <td>별 내용 없을듯</td>
-            </tr>
-          </table>
-        </div>
-        <div class="l-page">
-                    여기는 페이징 들어갈곳~
+          <div class="l-line">
+            <p class="l-date">날짜</p>
+            <p class="l-content">내용</p>
+          </div>
+          <div class="l-reply">답장하기</div>
+          
+          <div class="l-date-c"> 2022-05-23 21:30 날짜반복 </div>
+          <div class="l-content-c"> 별 내용은 없는데 일단 내용은 들어가야함~~! 내용반복</div>
+          <div class="l-reply-c"> 화살표 이미지 </div>
         </div>
       </div>
     </div>
-    <!--
-    <div class="row">
-      <div class="col-md-8 bg02"> 8사이즈 </div>
-      <div class="col-md-4 bg04"> 4사이즈 </div>
-    </div>
-      -->   
   </div>
 </body>
 </html>
