--- a/ManiMani/src/main/resources/static/css/letter.css
+++ b/ManiMani/src/main/resources/static/css/letter.css
@@ -1,60 +1,115 @@
 @charset "UTF-8";
 
-.table-letter {
-	width: 80%;
-	height: 800px;
-	min-width: 800px;
-	display: flex;
-	margin: auto;
+.send {
+    position: relative;
+    width : 150px;
+    height : 40px;
+    border-radius: 20px;
+    border: 1.5px solid #494949;
+    background-color: #fd9c87;
+    color: white;
+    display: inline-block;
+}
+
+.receive {
+    position: relative;
+    width : 150px;
+    height : 40px;
+    border-radius: 20px;
+    border: 1.5px solid #494949;
+    background-color: #7cdda6;
+    color: white;
+    display: inline-block;
 }
 
 .letterbox {
 	position: relative;
 	width: 90%;
-	height: 720px;
+	height: 90%;
 	border-radius: 20px;
 	border: 1.5px solid #494949;
-	background-color: #dcedbc;
+	background-color: #fd9c87;
 	margin: 15px;
-	padding: 15px;
-	display: inline-block;
+	padding: 5px;
+	display: flex;
 }
 
 .letterbox-s {
     position: relative;
-    width: 95%;
-    height: 550px;
+    width: 100%;
+    height: 100%;
     border-radius: 20px;
     border: 1.5px solid #494949;
-    background-color: #fff7ee;
-    margin: 20px;
+    background-color: #ffffff;
+    margin: 8px;
     padding: 20px;
-    display: inline-block;	
+}
+.l-line {
+    width : 80%;
+    height : 40px;
+    padding: 10px;
+    border : 1.5px solid #494949;
+    background-color: #93b8ef;
+    color: white;
+    border-radius: 20px;
+    display: inline-block;
+    	
+}
+/*************************************************************/
+.l-date {
+    text-align: center;
+    width : 40%;
+    height : 40px;
+    color: white;
+    display: inline-block;
 }
 
-.l-table {
-	width: 100%;
+.l-content {
+    text-align: center;
+    width : 50%;
+    height : 40px;
+    color: white;
+    display: inline-block;
 }
 
-.l-table tr {
+.l-reply {
 	text-align: center;
+    width : 15%;
+    height : 40px;
 	padding: 10px;
-}
-
-.l-table th {
-	text-align: center;
-	padding: 10px;
+	border: 1.5px solid #494949;
 	border-radius: 20px;
-	border: 1.5px #494949;
 	background-color: #93b8ef;
 	color: white;
+    display: inline-block;
+}
+/*************************************************************/
+
+
+.l-date-c {
+	text-align: center;
+	width : 30%;
+	padding: 10px;
+	border-bottom : 1.5px solid #cccccc;
+    display: inline-block;
 }
 
-.l-table td {
-	text-align: center;
-	padding: 10px;
+.l-content-c {
+    text-align: center;
+    width : 50%;
+    padding: 10px;
+    border-bottom : 1.5px solid #cccccc;
+	display: inline-block;
+}
+
+.l-reply-c {
+    text-align: center;
+    width : 15%;
+    padding: 10px;	
+	display: inline-block;
 }
 
 .l-page {
 	text-align: center;
 }
+
